@@ -10,7 +10,7 @@
 * Dependencies
 */
 
-//import helpers from './../../../helpers/index';
+import helpers from './../../../helpers/index';
 
 /**
  * Object
@@ -20,18 +20,19 @@
 
 let exposed = new class {
 
-	grabCurrencies(input){
-
+	getCurrenciesAndRates(callback){
+		helpers.communicate.ajax.get('https://crossorigin.me/http://www.ecb.europa.eu/stats/eurofxref/eurofxref-hist-90d.xml', result => {
+			callback(helpers.convert.xml.toJSON(result));
+		});
 	}
 
-	exchange(input) {
+	exchange(input, callback) {
 		console.log('communicator_postLog: Fire');
 		console.log(input);
 
-		//const messageOutput = input.messageOutput;
-
-
-
+		helpers.exchange(input, result => {
+			callback(result);
+		});
 	}
 };
 
